--- a/fintools/templates/navbar.html
+++ b/fintools/templates/navbar.html
@@ -1,2 +1,47 @@
 <!DOCTYPE html>
-<h1>Navbar</h1>
+{% load static %}
+<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="{% url 'index' %}">
+        <img src="{% static 'images/fintools-logo.png' %}" width="112" height="28">
+      </a>
+  
+      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+    </div>
+  
+    <div id="navbar" class="navbar-menu">
+      <div class="navbar-start">
+        <a class="navbar-item" href="{% url 'index' %}">
+          Home
+        </a>  
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Calculators
+          </a>
+  
+          <div class="navbar-dropdown">
+            <a class="navbar-item" href="{% url 'pmi_calculator' %}">
+              Mortgage Insurance
+            </a>
+          </div>
+        </div>
+      </div>
+  
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <!-- <div class="buttons">
+            <a class="button is-primary">
+              <strong>Sign up</strong>
+            </a>
+            <a class="button is-light">
+              Log in
+            </a>
+          </div>
+        </div> -->
+      </div>
+    </div>
+  </nav>
