Create annuity calculator

--- a/fintools/templates/calculator/pmi_calculator.html
+++ b/fintools/templates/calculator/pmi_calculator.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 {% extends "../main.html" %}
 {% block content %}
-    <h1>Calculator</h1>
+    <h1>PMI Calculator</h1>
 {% endblock %}
