--- a/fintools/templates/navbar.html
+++ b/fintools/templates/navbar.html
@@ -22,11 +22,9 @@
           <a class="navbar-link">
             Calculators
           </a>
-  
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="{% url 'pmi_calculator' %}">
-              Mortgage Insurance
-            </a>
+            <a class="navbar-item" href="{% url 'pmi_calculator' %}">Mortgage Insurance</a>
+            <a class="navbar-item" href="{% url 'annuity_calculator' %}">Future Value of Annuity</a>
           </div>
         </div>
       </div>
