--- a/fintools/templates/calculator/pmi_calculator.html
+++ b/fintools/templates/calculator/pmi_calculator.html
@@ -7,11 +7,11 @@
         <div class="tile is-parent">
             <div class="tile is-child box has-background-light">
                 <h1 class="subtitle is-5">PMI Calculator</h1>
+                <form method="POST">
                 <div class="columns">
-                    <div class="column is-3">
-                        <form method="POST">
+                    <div class="column is-4">
                             {% csrf_token %}
-                            {% for field in form.visible_fields %}
+                            <!-- {% for field in form.visible_fields %}
                                 <div class="field">
                                     <label class="label">{{ field.label }}</label>
                                         <div class="bulma-control-mixin">
@@ -21,33 +21,87 @@
                                             <p class="help">{{field.help_text}}</p>
                                         {% endif %}
                                 </div>
-                            {% endfor %}
+                            {% endfor %} -->
+                            <!-- Purchase Price -->
                             <div class="field">
-                                <label class="label">{{ form.interest_rate.label }}</label>
-                                    <div class="bulma-control-mixin control has-icons-right">
-                                        {% render_field form.interest_rate class="input bulma-control-mixin" %}
-                                        <span class="icon is-right">
-                                            <i class="fa-solid fa-percent"></i>
+                                <label class="label">{{ form.purchase_price.label }}</label>
+                                    <div class="bulma-control-mixin control has-icons-left">
+                                        {% render_field form.purchase_price class="input bulma-control-mixin" %}
+                                        <span class="icon is-left">
+                                            <i class="fa-solid fa-dollar-sign"></i>
                                         </span>
                                     </div>
-                                    {% if form.interest_rate.help_text %}
-                                        <p class="help">{{field.help_text}}</p>
-                                    {% endif %}
+                                    <p class="help">{{form.purchase_price.help_text}}</p>
                             </div>
-                            <div class="columns is-vcentered">
-                                <div class="column">
-                                    <input class="button is-primary" type="submit" value="Submit"/>
+                            <!-- Down Payment -->
+                            <div class="field">
+                                <label class="label">{{ form.down_payment.label }}</label>
+                                <div class="bulma-control-mixin control has-icons-right">
+                                    {% render_field form.down_payment class="input bulma-control-mixin" %}
+                                    <span class="icon is-right">
+                                        <i class="fa-solid fa-percent"></i>
+                                    </span>
                                 </div>
-                                <div class="column is-8">
+                                <p class="help">{{form.down_payment.help_text}}</p>
+                            </div>
+                    </div>  
+                    <div class="column is-4">
+                        <!-- Interest Rate -->
+                        <div class="field">
+                            <label class="label">{{ form.interest_rate.label }}</label>
+                                <div class="bulma-control-mixin control has-icons-right">
+                                    {% render_field form.interest_rate class="input bulma-control-mixin" %}
+                                    <span class="icon is-right">
+                                        <i class="fa-solid fa-percent"></i>
+                                    </span>
+                                </div>
+                                <p class="help">{{form.interest_rate.help_text}}</p>
+                        </div>
+                        <!-- Loan Term -->
+                        <div class="field">
+                            <label class="label">{{ form.loan_term.label }}</label>
+                                <div class="bulma-control-mixin control">
+                                    {% render_field form.loan_term class="input bulma-control-mixin" %}
+                                </div>
+                                <p class="help">{{form.loan_term.help_text}}</p>
+                        </div>
+                    </div>
+                    <div class="column is-4">
+                        <!-- Monthly PMI Payment -->
+                        <div class="field">
+                            <label class="label">{{ form.monthly_pmi_payment.label }}</label>
+                                <div class="bulma-control-mixin control has-icons-left">
+                                    {% render_field form.monthly_pmi_payment class="input bulma-control-mixin" %}
+                                    <span class="icon is-left">
+                                        <i class="fa-solid fa-dollar-sign"></i>
+                                    </span>
+                                </div>
+                                <p class="help">{{form.monthly_pmi_payment.help_text}}</p>
+                        </div>
+                        <!-- Opportunity Cost -->
+                        <div class="field">
+                            <label class="label">{{ form.opportunity_cost_roi.label }}</label>
+                            <div class="bulma-control-mixin control has-icons-right">
+                                {% render_field form.opportunity_cost_roi class="input bulma-control-mixin" %}
+                                <span class="icon is-right">
+                                    <i class="fa-solid fa-percent"></i>
+                                </span>
+                            </div>
+                            <!-- <p class="help">{{form.opportunity_cost_roi.help_text}}</p> -->
+                        </div>
+                    </div>
+                </div>
+                           
+                        <input class="button is-primary is-medium" type="submit" value="Submit"/>
+                            <!-- <div class="columns is-vcentered"> -->
+                                <!-- <div class="column"> -->
+                                <!-- </div> -->
+                                <!-- <div class="column is-8">
                                     <!-- TODO: Add Explanation here -->
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="column">
-                        
-                    </div>
-                </div>  
+                                <!-- </div>  -->
+                            <!-- </div> -->
+                        <!-- </div> -->
+                    </form>
             </div>
         </div>
     </div>
