Update navbar logo and hide hamburger

--- a/fintools/templates/navbar.html
+++ b/fintools/templates/navbar.html
@@ -3,24 +3,24 @@
 <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="{% url 'index' %}">
-        <img src="{% static 'images/fintools-logo.png' %}" width="112" height="28">
+        <img src="{% static 'images/moneymako_logo.png' %}" width="max" height="max">
       </a>
   
-      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <!-- <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
-      </a>
+      </a> -->
     </div>
   
     <div id="navbar" class="navbar-menu">
       <div class="navbar-start">
         <a class="navbar-item" href="{% url 'index' %}">
-          Home
+          <strong>Home</strong>
         </a>  
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
-            Calculators
+            <strong>Calculators</strong>
           </a>
           <div class="navbar-dropdown">
             <a class="navbar-item" href="{% url 'pmi_calculator' %}">Mortgage Insurance</a>
