--- a/fintools/templates/calculator/annuity_calculator.html
+++ b/fintools/templates/calculator/annuity_calculator.html
@@ -12,8 +12,9 @@
                         <div class="field">
                             <label class="label">{{ field.label }}</label>
                                 <div class="bulma-control-mixin">
-                                    {% render_field field class="input bulma-control-mixin" placeholder=field.help_text %}
+                                    {% render_field field class="input bulma-control-mixin" %}
                                 </div>
+                                <p class="help">{{field.help_text}}</p>
                         </div>
                     {% endfor %}
                     <div class="columns is-vcentered">
