--- a/fintools/templates/navbar.html
+++ b/fintools/templates/navbar.html
@@ -5,15 +5,14 @@
       <a class="navbar-item" href="{% url 'index' %}">
         <img src="{% static 'images/moneymako_logo.png' %}" width="max" height="max">
       </a>
-  
-      <!-- <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <a role="button" class="navbar-burger" id="burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
-      </a> -->
+      </a>
     </div>
   
-    <div id="navbar" class="navbar-menu">
+    <div id="nav-links" class="navbar-menu" is-active>
       <div class="navbar-start">
         <a class="navbar-item" href="{% url 'index' %}">
           <strong>Home</strong>
