Display success or error messages on UI

--- a/fintools/templates/main.html
+++ b/fintools/templates/main.html
@@ -21,4 +21,5 @@
     </section>
 </body>
 <script src="{% static 'js/navbar.js' %}"></script>
+<script src="{% static 'js/index.js' %}"></script>
 </html>
