--- a/fintools/templates/index.html
+++ b/fintools/templates/index.html
@@ -2,10 +2,40 @@
 {% extends "main.html" %}
 {% load widget_tweaks %}
     {% block content %}
+        <!-- Notifications -->
+        {% if messages %}
+            {% for message in messages %}
+                <!-- Success Message -->
+                {% if message.message == "Thanks for signing up! We'll be in touch soon!" %}
+                    <article class="message is-success">
+                        <div class="message-header">
+                        <p>Success</p>
+                        <button class="delete" aria-label="delete"></button>
+                        </div>
+                        <div class="message-body">
+                        {{ message }}
+                        </div>
+                    </article>
+                {% else %}
+                <!-- Failure Message -->
+                <article class="message is-danger">
+                    <div class="message-header">
+                      <p>Failure</p>
+                      <button class="delete" aria-label="delete"></button>
+                    </div>
+                    <div class="message-body">
+                      {{ message.message }}
+                    </div>
+                  </article>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
+
+        <!-- Content -->
         <section class="hero">
             <div class="hero-body">
                 <div class="container">
-                    <div class="content">
+                    <div class="content is-medium">
                     <h1 class="title is-2">Optimize your finances.</h1>
                         <p class="subtitle">There is a lot of conflicting financial advice out there. Our personalized tools and guides
                             will help you cut through the noise and make the best decisions for your financial future.</p>
@@ -18,7 +48,6 @@
                             </ul>
                             <p class="subtitle">Join our newsletter to stay in the loop on new features and content!</p>
                     </div>
-                    <!-- <a class="button is-primary is-large" href="{% url 'index' %}#notify">Notify Me</a> -->
                 </div>
             </div>    
         </section>
@@ -31,7 +60,7 @@
                         <div class="container">
                         <div class="columns">
                             <div class="column is-6">
-                            <h1 class="title is-2">Get Notified</h1>
+                            <h1 class="title is-2">Stay in Touch</h1>
                             <hr class="content-divider">
                             <h2 class="subtitle">Be the first to know about new features and tools for planning your financial future. We won't flood your inbox or share your email with anyone.</h2>
                             </div>
@@ -44,10 +73,11 @@
                                         <div class="bulma-control-mixin">
                                         {% render_field field class="input is-medium bulma-control-mixin" type="text" placeholder=field.label %}
                                         </div>
+                                        <p class="help is-danger">{{field.errors}}</p>
                                     </div>
                                     <br>
                                     {% endfor %}
-                                    
+                                   
                                     <!-- <div class="field">
                                         <label class="label">Email</label>
                                         <div class="control">
@@ -57,7 +87,7 @@
                                     <br> -->
                                     <div class="field is-grouped">
                                         <div class="control">
-                                            <button class="button is-primary is-large">Submit</button>
+                                            <button class="button js-modal-trigger is-primary is-large" data-target="registration-modal">Submit</button>
                                         </div>
                                     </div>
                                 </form>
