Auto scroll to display pmi table data when it appears

--- a/fintools/templates/main.html
+++ b/fintools/templates/main.html
@@ -22,4 +22,5 @@
 </body>
 <script src="{% static 'js/navbar.js' %}"></script>
 <script src="{% static 'js/index.js' %}"></script>
+<script src="{% static 'js/pmi_calculator.js' %}"></script>
 </html>
