--- a/templates/index.html
+++ b/templates/index.html
@@ -77,14 +77,7 @@
                                     </div>
                                     <br>
                                     {% endfor %}
-                                   
-                                    <!-- <div class="field">
-                                        <label class="label">Email</label>
-                                        <div class="control">
-                                            <input class="input is-medium" type="email" placeholder="Email">
-                                        </div>
-                                    </div>
-                                    <br> -->
+                                    {{form.botcatcher}}
                                     <div class="field is-grouped">
                                         <div class="control">
                                             <button class="button js-modal-trigger is-primary is-large" data-target="registration-modal">Submit</button>
