Switch logo to finmako

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
 <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="{% url 'index' %}">
-        <img src="{% static 'images/moneymako_logo.png' %}" width="max" height="max">
+        <img src="{% static 'images/finmako_logo.png' %}" width="max" height="max">
       </a>
       <a role="button" class="navbar-burger" id="burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
         <span aria-hidden="true"></span>
