Build poc form to access backtesting engine

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,6 +26,9 @@
             <a class="navbar-item" href="{% url 'annuity_calculator' %}">Future Value of Annuity</a>
           </div>
         </div>
+        <a class="navbar-item" href="{% url 'backtester' %}">
+          <strong>Investment Backtester</strong>
+        </a>  
       </div>
   
       <div class="navbar-end">
