--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -41,3 +41,7 @@ $input-shadow: none;
 @import "../node_modules/bulma/sass/grid/_all.sass";
 @import "../node_modules/bulma/sass/helpers/_all.sass";
 @import "../node_modules/bulma/sass/layout/_all.sass";
+
+// Extensions
+@import "../node_modules/bulma-calendar/src/sass/index.sass";
+@import "../node_modules/bulma-calendar/src/sass/timepicker.sass";
