Add chart container

--- a/templates/backtester/backtester.html
+++ b/templates/backtester/backtester.html
@@ -46,6 +46,11 @@
         </div>
     </div>
 </section>
+<section id="chart-section">
+    <div id="chart-container" width="600px" height="400px">
+        
+    </div>
+</section>
 
 <!-- Data Table -->
 {% if backtest_data %}
