Copy changes for upcoming features

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,9 +41,9 @@
                             will help you cut through the noise and make the best decisions for your financial future.</p>
                             <p class="subtitle">Here is a sneak peek at some of our upcoming features:</p>
                             <ul>
-                                <li>Use our backtesting engine to simulate the performance of your investment strategies</li>
-                                <li>Securely connect to your financial accounts using Plaid for AI-assisted decision making</li>
+                                <li>Refine your investment strategy by adding metric-based buy and sell triggers to the backtester</li>
                                 <li>Save and compare scenarios to help make the best possible decision</li>
+                                <li>Securely connect to your financial accounts using Plaid for AI-assisted decision making</li>
                                 <li>Investing guides and educational content to help you take control of your finances</li>
                             </ul>
                             <p class="subtitle">Join our newsletter to stay in the loop on new features and content!</p>
