--- a/templates/main.html
+++ b/templates/main.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/bulma_styles.css' %}">
     <link rel="stylesheet" href="{% static 'css/custom_styles.css' %}">
     <script src="https://kit.fontawesome.com/42ce5d6b63.js" crossorigin="anonymous"></script>
-    <title>Fintools</title>
+    <title>FinMako Finance Tools</title>
 </head>
 <body>
     {% include 'navbar.html'%}
