Remove bulma calendar due to import issues

--- a/assets/bulma/styles.scss
+++ b/assets/bulma/styles.scss
@@ -43,5 +43,5 @@ $input-shadow: none;
 @import "../../node_modules/bulma/sass/layout/_all.sass";
 
 // Extensions
-@import "../../node_modules/bulma-calendar/src/sass/index.sass";
-@import "../../node_modules/bulma-calendar/src/sass/timepicker.sass";
+// @import "../../node_modules/bulma-calendar/src/sass/index.sass";
+// @import "../../node_modules/bulma-calendar/src/sass/timepicker.sass";
