--- a/templates/index.html
+++ b/templates/index.html
@@ -17,10 +17,10 @@
                         </div>
                     </article>
                 {% else %}
-                <!-- Failure Message -->
+                <!-- Error Message -->
                 <article class="message is-danger">
                     <div class="message-header">
-                      <p>Failure</p>
+                      <p>Error</p>
                       <button class="delete" aria-label="delete"></button>
                     </div>
                     <div class="message-body">
